--- a/Prova_Final_Roriz.ipynb
+++ b/Prova_Final_Roriz.ipynb
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -323,35 +323,45 @@
         "from sklearn.metrics import accuracy_score\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "import streamlit as st"
+        "import streamlit as st\n",
+        "import csv"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 35,
       "metadata": {
         "id": "e1Y6J-aqz7z-"
       },
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'pandas' is not defined",
+          "ename": "ParserError",
+          "evalue": "Error tokenizing data. C error: EOF inside string starting at row 11055",
           "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpandas\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/workspaces/NLP_e_vida/IMDB Dataset.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'pandas' is not defined"
+            "\u001b[0;31mParserError\u001b[0m                               Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dadosTreino \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mimdb-reviews-pt-br.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msep\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m,\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/readers.py:1026\u001b[0m, in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/readers.py:626\u001b[0m, in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/readers.py:1923\u001b[0m, in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/c_parser_wrapper.py:234\u001b[0m, in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n",
+            "File \u001b[0;32mparsers.pyx:838\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader.read_low_memory\u001b[0;34m()\u001b[0m\n",
+            "File \u001b[0;32mparsers.pyx:905\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[0;34m()\u001b[0m\n",
+            "File \u001b[0;32mparsers.pyx:874\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[0;34m()\u001b[0m\n",
+            "File \u001b[0;32mparsers.pyx:891\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._check_tokenize_status\u001b[0;34m()\u001b[0m\n",
+            "File \u001b[0;32mparsers.pyx:2061\u001b[0m, in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mParserError\u001b[0m: Error tokenizing data. C error: EOF inside string starting at row 11055"
           ]
         }
       ],
       "source": [
-        "df = pd.read_csv('/workspaces/NLP_e_vida/IMDB Dataset.csv')"
+        "dadosTreino = pd.read_csv('imdb-reviews-pt-br.csv', sep=',')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -361,15 +371,14 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                                              review sentiment\n",
-            "0  One of the other reviewers has mentioned that ...  positive\n",
-            "1  A wonderful little production. The filming tec...  positive\n",
-            "2  I thought this was a wonderful way to spend ti...  positive\n",
-            "3  Basically there's a family where a little boy ...  negative\n",
-            "4  Petter Mattei's \"Love in the Time of Money\" is...  positive\n"
+          "ename": "NameError",
+          "evalue": "name 'dadosTreino' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[10], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m re\u001b[38;5;241m.\u001b[39msub(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m<br\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms*/?>\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, text)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Aplicar a função a todas as resenhas na coluna 'review'\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m dadosTreino[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreview\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdadosTreino\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreview\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(clean_review)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Exibir as primeiras linhas do DataFrame para verificar\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(dadosTreino\u001b[38;5;241m.\u001b[39mhead())\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'dadosTreino' is not defined"
           ]
         }
       ],
@@ -379,10 +388,10 @@
         "    return re.sub(r'<br\\s*/?>', '', text)\n",
         "\n",
         "# Aplicar a função a todas as resenhas na coluna 'review'\n",
-        "df['review'] = df['review'].apply(clean_review)\n",
+        "dadosTreino['review'] = dadosTreino['review'].apply(clean_review)\n",
         "\n",
         "# Exibir as primeiras linhas do DataFrame para verificar\n",
-        "print(df.head())"
+        "print(dadosTreino.head())"
       ]
     },
     {
