--- a/Prova_Final_Roriz.ipynb
+++ b/Prova_Final_Roriz.ipynb
@@ -356,7 +356,7 @@
         }
       ],
       "source": [
-        "dadosTreino = pd.read_csv('imdb-reviews-pt-br.csv', sep=',')"
+        "dadosTreino = pd.read_csv('imdb-reviews-pt-br.csv')"
       ]
     },
     {
